[gd_scene load_steps=5 format=3 uid="uid://dibafas5mtxem"]

[ext_resource type="Script" uid="uid://1gr5sxlvbrxx" path="res://ui/HUD/notebook.gd" id="1_mi3cd"]
[ext_resource type="Texture2D" uid="uid://bh0erlkboubwc" path="res://grafiki od Kateryny/book pages/book- main.png" id="2_miyd5"]
[ext_resource type="AudioStream" uid="uid://br4ih3fvucdst" path="res://audio/kartka_1.wav" id="3_miyd5"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_l6rjd"]

[node name="notebook" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mi3cd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_miyd5")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 275
theme_override_constants/margin_top = 140
theme_override_constants/margin_right = 295
theme_override_constants/margin_bottom = 100

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
visible = false
layout_mode = 2
color = Color(0.733333, 0.733333, 0.733333, 1)

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Notatnik"
horizontal_alignment = 1

[node name="Diary" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Dziennik"

[node name="Button2" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Mieszka≈Ñcy falowca"

[node name="Button3" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Poszlaki"

[node name="Button4" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Lokacje"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="close" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/icon_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(1, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
text = "X"
icon = SubResource("PlaceholderTexture2D_l6rjd")
flat = true
icon_alignment = 1
expand_icon = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_miyd5")

[connection signal="pressed" from="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/Diary" to="." method="_on_diary_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/Button2" to="." method="_on_inhabitants_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/Button3" to="." method="_on_items_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/Button4" to="." method="_on_places_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer2/close" to="." method="_on_close_pressed"]
