[gd_scene load_steps=13 format=3 uid="uid://dpw2sqn3b44lq"]

[ext_resource type="Script" uid="uid://1gr5sxlvbrxx" path="res://ui/HUD/notebook.gd" id="1_ke7gr"]
[ext_resource type="Texture2D" uid="uid://bh0erlkboubwc" path="res://grafiki od Kateryny/book pages/book- main.png" id="2_pdjj5"]
[ext_resource type="AudioStream" uid="uid://br4ih3fvucdst" path="res://audio/kartka_1.wav" id="3_1xtek"]
[ext_resource type="Texture2D" uid="uid://uqoxqwixdm67" path="res://ZEmess/dorota2.png" id="3_uqrx7"]
[ext_resource type="Texture2D" uid="uid://dlrf6g6cfbpum" path="res://world/NPCs/NPC-folders/babcia/texture.png" id="4_6yo4e"]
[ext_resource type="Texture2D" uid="uid://b36epmy7eqqqv" path="res://world/NPCs/NPC-folders/sklepowa/texture.png" id="5_rb6jl"]
[ext_resource type="Texture2D" uid="uid://cm42ff8qbtxs3" path="res://world/NPCs/NPC-folders/marynarz/texture.png" id="6_2ji3p"]
[ext_resource type="Texture2D" uid="uid://boqv0yql0sa42" path="res://world/NPCs/NPC-folders/anna/texture.png" id="7_2stdl"]
[ext_resource type="Texture2D" uid="uid://c04wcvuxqsviv" path="res://world/NPCs/NPC-folders/janek/texture.png" id="8_xxoom"]
[ext_resource type="Texture2D" uid="uid://qtro4f2chgdc" path="res://world/NPCs/NPC-folders/sierzant/texture.png" id="9_62tgu"]
[ext_resource type="Texture2D" uid="uid://cl5mcmmj1hj6q" path="res://world/NPCs/NPC-folders/kapral/texture.png" id="10_t8363"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_uqrx7"]

[node name="Inhabitants" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ke7gr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pdjj5")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 275
theme_override_constants/margin_top = 140
theme_override_constants/margin_right = 295
theme_override_constants/margin_bottom = 100

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
visible = false
layout_mode = 2
color = Color(0.733333, 0.733333, 0.733333, 1)

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Mieszkańcy"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Dorota" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Dorota"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("3_uqrx7")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Dorota"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Dorota"
horizontal_alignment = 1

[node name="Dorota2" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Dorota2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("4_6yo4e")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Dorota2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Pani Krysia"
horizontal_alignment = 1

[node name="Dorota3" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Dorota3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("5_rb6jl")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Dorota3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Sklepowa"
horizontal_alignment = 1

[node name="Dorota4" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Dorota4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("6_2ji3p")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Dorota4"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Marynarz"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Dorota" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Dorota"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("7_2stdl")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Dorota"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Maja Anna"
horizontal_alignment = 1

[node name="Dorota2" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Dorota2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("8_xxoom")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Dorota2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Janek"
horizontal_alignment = 1

[node name="Dorota3" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Dorota3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("9_62tgu")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Dorota3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Sierżant"
horizontal_alignment = 1

[node name="Dorota4" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Dorota4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("10_t8363")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Dorota4"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Kapral"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 45

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="notebook" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/icon_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(1, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
text = "X"
icon = SubResource("PlaceholderTexture2D_uqrx7")
flat = true
icon_alignment = 1
expand_icon = true

[node name="close" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/icon_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(1, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
text = "X"
icon = SubResource("PlaceholderTexture2D_uqrx7")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Label" type="RichTextLabel" parent="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "info o mieszkańcu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1xtek")

[connection signal="pressed" from="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/notebook" to="." method="_on_notebook_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/close" to="." method="_on_close_pressed"]
